troca de numeros

--- a/login e cadastro - html sarah (1)/Cadastro.html
+++ b/login e cadastro - html sarah (1)/Cadastro.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro</title>
-  <link rel="stylesheet" href="Cadastro (1).css">
+  <link rel="stylesheet" href="Cadastro.css">
   <link rel="icon" href="logoo ofcc (1).png" type="imagem/x-icon">
 </head>
 
@@ -28,7 +28,7 @@
     </select>
 
     <button type="submit">Cadastrar</button>
-    <a href="Login (1).html" class="btn-login">Login</a>
+    <a href="Login.html" class="btn-login">Login</a>
   </form>
 
   <p id="mensagem"></p>
