--- a/login e cadastro - html sarah (1)/Login.html
+++ b/login e cadastro - html sarah (1)/Login.html
@@ -19,7 +19,7 @@
     <p id="mensagem"></p>
 
     <h2>Não Possui Cadastro?</h2>
-    <a href="Cadastro (1).html">Então Faça Seu Cadastro</a>
+    <a href="Cadastro.html">Então Faça Seu Cadastro</a>
   </div> 
 
   <!-- Firebase -->
