--- a/login e cadastro - html sarah (1)/adm.html
+++ b/login e cadastro - html sarah (1)/adm.html
@@ -122,7 +122,7 @@ header img{
 </head>
 <body>
   <header>
-    <a href="Login (1).html">
+    <a href="Login.html">
     <img src="logoo ofcc (1).png" alt="Logo de Livraria">
     </a>
     <div>
@@ -135,7 +135,7 @@ header img{
   
   <section class="minhalista">
     <div class="card">
-      <a href="entradaesaidaadm (1).html">
+      <a href="entradaesaidaadm.html">
         <div class="card-content">
             <h2>Registro de Entrada e Saída</h2>
         </div>
@@ -143,7 +143,7 @@ header img{
     </div>
 
     <div class="card">
-      <a href="cadastroestoque (1).html">
+      <a href="cadastroestoque.html">
         <div class="card-content">
           <h2>Cadastro de Produtos</h2>
         </div>
@@ -151,7 +151,7 @@ header img{
     </div>
 
     <div class="card">
-      <a href="relatorioestoqueadm (1).html">
+      <a href="relatorioestoqueadm.html">
         <div class="card-content">
             <h2>Relatório do Estoque</h2>
         </div>
