trocando os numeros de novo

--- a/login e cadastro - html sarah (1)/cadastroestoque.html
+++ b/login e cadastro - html sarah (1)/cadastroestoque.html
@@ -113,7 +113,7 @@
 <body>
 
 <header>
-  <a href="Login (1).html">
+  <a href="Login.html">
     <img src="logoo ofcc (1).png" alt="Logo de Livraria">
   </a>
     <div>
@@ -135,7 +135,7 @@
 
   <button id="btnAdicionar">Adicionar</button>
 
-  <a href="adm (1).html">
+  <a href="adm.html">
    <button id="btnvoltar">Voltar</button>
   </a>
 
