--- a/login e cadastro - html sarah (1)/entradaesaidaadm.html
+++ b/login e cadastro - html sarah (1)/entradaesaidaadm.html
@@ -138,7 +138,7 @@
 </head>
 <body>
   <header>
-    <a href="login (1).css">
+    <a href="Login.html">
     <img src="logoo ofcc (1).png" alt="Logo de Livraria">
     </a>
     <div class="h1">
@@ -160,7 +160,7 @@
     <tbody id="tabela-produtos"></tbody>
   </table>
   <div class="button-voltar">
-    <a href="adm (1).html">
+    <a href="adm.html">
       <button id="btnVoltar">Voltar</button>
     </a>
   </div>
