--- a/login e cadastro - html sarah (1)/entradaesaidafunc.html
+++ b/login e cadastro - html sarah (1)/entradaesaidafunc.html
@@ -139,7 +139,7 @@
 </head>
 <body>
   <header>
-    <a href="Login (1).html">
+    <a href="Login.html">
     <img src="logoo ofcc (1).png" alt="Logo de Livraria">
     </a>
     <div>
@@ -161,7 +161,7 @@
     <tbody id="tabela-produtos"></tbody>
   </table>
   <div class="button-voltar">
-    <a href="pagfunc (1).html">
+    <a href="pagfunc.html">
       <button id="btnVoltar">Voltar</button>
     </a>
   </div>
