--- a/login e cadastro - html sarah (1)/pagfunc.html
+++ b/login e cadastro - html sarah (1)/pagfunc.html
@@ -122,7 +122,7 @@ header img{
 </head>
 <body>
   <header>
-    <a href="Login (1).html">
+    <a href="Login.html">
     <img src="logoo ofcc (1).png" alt="Logo de Livraria">
     </a>
     <div>
@@ -135,7 +135,7 @@ header img{
   
   <section class="minhalista">
     <div class="card">
-      <a href="entradaesaidafunc (1).html">
+      <a href="entradaesaidafunc.html">
         <div class="card-content">
             <h2>Registro de Entrada e Saída</h2>
         </div>
@@ -144,7 +144,7 @@ header img{
       
 
     <div class="card">
-      <a href="relatorioestoquefun (1).html">
+      <a href="relatorioestoquefun.html">
         <div class="card-content">
             <h2>Relatório do Estoque</h2>
         </div>
