--- a/login e cadastro - html sarah (1)/Login.html
+++ b/login e cadastro - html sarah (1)/Login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="login (1).css">
+  <link rel="stylesheet" href="login.css">
   <link rel="icon" href="logoo ofcc (1).png" type="imagem/x-icon">
 </head>
 <body>
