--- a/login e cadastro - html sarah (1)/relatorioestoquefun.html
+++ b/login e cadastro - html sarah (1)/relatorioestoquefun.html
@@ -165,7 +165,7 @@
 <body>
 
 <header>
-  <a href="Login (1).html">
+  <a href="Login.html">
     <img src="logoo ofcc (1).png" alt="Logo de Livraria">
   </a>
     <div>
@@ -207,7 +207,7 @@
 
 </div>
 <div class="button-voltar">
-    <a href="pagfunc (1).html">
+    <a href="pagfunc.html">
       <button id="btnVoltar">Voltar</button>
     </a>
   </div>
