--- a/indexofc (1).html
+++ b/indexofc (1).html
@@ -79,10 +79,10 @@
 Guiado pelo slogan "Controle total, resultado real", o Estoque Pro entrega exatamente isso: controle absoluto sobre cada etapa do processo e resultados concretos que impactam diretamente a produtividade e a lucratividade do negócio. Ideal para empresas que buscam organização, agilidade e insights claros para otimizar sua operação.</p>
         </div>
         <div class="card-container">
-            <a class="imagem-circular" href="login e cadastro - html sarah (1)/Login (1).html">
+            <a class="imagem-circular" href="login e cadastro - html sarah (1)/Login.html">
                 <img src="img (1)/logoo ofcc (1).png" alt="Projeto"> 
             </a>
-            <a class="visualizar-btn" href="login e cadastro - html sarah (1)/Login (1).html">Visualizar</a>
+            <a class="visualizar-btn" href="login e cadastro - html sarah (1)/Login.html">Visualizar</a>
         </div>
     </div>
     <footer>
