se deus quiser o ultimo que eu precise trocar os numeros

--- a/indexofc (1).html
+++ b/indexofc (1).html
@@ -12,7 +12,7 @@
         <div class="logo">
             <img src="img (1)/logo (1).png" alt="Logo da Empresa">
         </div>
-        <a class="button" href="login e cadastro - html sarah (1)/Login (1).html">
+        <a class="button" href="login e cadastro - html sarah (1)/Login.html">
             <img src="img (1)/logoo ofcc (1).png" alt="Login">
         </a>
     </header>
