adicionando numeros ao que falta

--- a/login e cadastro - html sarah (1)/relatorioestoqueadm.html
+++ b/login e cadastro - html sarah (1)/relatorioestoqueadm.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Relatório do Estoque</title>
-<link rel="icon" href="logoo ofcc.png" type="imagem/x-icon">
+<link rel="icon" href="logoo ofcc (1).png" type="imagem/x-icon">
 
 <style>
     
@@ -167,7 +167,7 @@
 
 <header>
   <a href="Login.html">
-    <img src="logoo ofcc.png" alt="Logo de Livraria">
+    <img src="logoo ofcc (1).png" alt="Logo de Livraria">
     </a>
     <div class="h1">
         <h1>Estoque Pro</h1>
