--- a/indexofc (1).html
+++ b/indexofc (1).html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Estoque | Empresa BitBuilders</title>
     <link rel="stylesheet" href="paginaestoque (1).css">
-    <link rel="icon" href="img/loguinho (1).png" type="imagem/x-icon">
+    <link rel="icon" href="img (1)/loguinho (1).png" type="imagem/x-icon">
 </head>
 <body>
     <header>
