--- a/login e cadastro - html sarah (1)/relatorioestoqueadm.html
+++ b/login e cadastro - html sarah (1)/relatorioestoqueadm.html
@@ -10,7 +10,7 @@
   body {
     margin: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-image:url("img/ofccfundo\ .png");
+    background-image:url("img (1)/ofccfundo\ \ \(1\).png");
     padding: 0;
     margin: 0;
     justify-items: center;
